Fixed so that minion cards don't bleed out of the frame, now the game is not scrollable anymore

--- a/src/card/card.scss
+++ b/src/card/card.scss
@@ -129,34 +129,35 @@
 
 		@at-root svg#{& + __attack} {
 			@include stat-overlay-item();
-			bottom: -8.5%;
+			bottom: 4%;
 			left: -3%;
 		}
 
 		@at-root svg#{& + __health} {
 			@include stat-overlay-item();
-			bottom: -9%;
+			bottom: 3.5%;
 			right: -7.5%;
 		}
 
 		&__race {
 			position: absolute;
+			height: 10%;
 		    width: 100%;
-		    height: 20%;
-		    bottom: -5%;
+		    bottom: 5%;
 		    left: 28%;
 
 			img {
 				width: 50%;
 			    position: absolute;
 			    left: 0;
+				top: 0;
 			}
 
 			svg {
 				width: 42%;
 			    position: absolute;
 			    left: 4%;
-			    top: -45%;
+			    top: -75%;
 
 				text {
 					text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
